Pleasing sat review Added addon.xml Seeded i18n file Adressed potential NPE detected by IDE.
Signed-off-by: clinique <gael@lhopital.org>